@@ -2,8 +2,11 @@ package com.doxan.doxan.application.usecase;
 
 import com.doxan.doxan.domain.dto.mapper.MediaDTOMapper;
 import com.doxan.doxan.domain.dto.mapper.PostDTOMapper;
+import com.doxan.doxan.domain.dto.request.UploadFileRequest;
 import com.doxan.doxan.domain.dto.request.post.PostCreateRequest;
 import com.doxan.doxan.domain.dto.request.post.PostUpdateRequest;
+import com.doxan.doxan.domain.dto.response.UploadFileResponse;
+import com.doxan.doxan.domain.dto.response.media.MediaResponse;
 import com.doxan.doxan.domain.dto.response.post.PostResponse;
 import com.doxan.doxan.domain.exception.AppException;
 import com.doxan.doxan.domain.exception.ErrorCode;
@@ -12,19 +15,23 @@ import com.doxan.doxan.domain.model.Media;
 import com.doxan.doxan.domain.model.Post;
 import com.doxan.doxan.domain.model.User;
 import com.doxan.doxan.domain.model.enums.MediaTargetType;
+import com.doxan.doxan.domain.model.enums.MediaType;
+import com.doxan.doxan.domain.model.enums.Visibility;
 import com.doxan.doxan.domain.port.in.PostUseCase;
 import com.doxan.doxan.domain.port.out.MediaRepositoryPort;
 import com.doxan.doxan.domain.port.out.MediaUploader;
 import com.doxan.doxan.domain.port.out.PostRepositoryPort;
 import com.doxan.doxan.domain.port.out.UserRepositoryPort;
+import com.doxan.doxan.domain.utils.UrlUtil;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.stereotype.Service;
+import org.springframework.transaction.annotation.Transactional;
 
+import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
-import java.util.stream.Collectors;
 
 @Service
 public class PostService implements PostUseCase {
@@ -35,6 +42,7 @@ public class PostService implements PostUseCase {
     private final UserRepositoryPort userRepository;
     private final MediaDTOMapper mediaDTOMapper;
     private final MediaService mediaService;
+    private final UploadFileService uploadFileService;
 
     public PostService(final UserRepositoryPort userRepository,
                        final MediaRepositoryPort mediaRepository,
@@ -42,7 +50,8 @@ public class PostService implements PostUseCase {
                        final MediaUploader mediaUploader,
                        final PostDTOMapper postDTOMapper,
                        final MediaDTOMapper mediaDTOMapper,
-                       final MediaService mediaService) {
+                       final MediaService mediaService,
+                       final UploadFileService uploadFileService) {
         this.userRepository = userRepository;
         this.mediaRepository = mediaRepository;
         this.postRepository = postRepository;
@@ -50,27 +59,37 @@ public class PostService implements PostUseCase {
         this.postDTOMapper = postDTOMapper;
         this.mediaDTOMapper = mediaDTOMapper;
         this.mediaService = mediaService;
+        this.uploadFileService = uploadFileService;
     }
 
     @Override
-    public PostResponse create(PostCreateRequest request, List<UploadFile> files) {
-        User user = userRepository.findById(request.getUserId()).orElseThrow(()
-                -> new AppException(ErrorCode.USER_NOT_EXISTED));
-        Post post = postDTOMapper.fromCreateRequest(request);
-        post.setUser(user);
+    @Transactional
+    public PostResponse create(PostCreateRequest request) {
+        User user = userRepository.findById(SecurityContextHolder.getContext().getAuthentication().getName())
+                .orElseThrow(() -> new AppException(ErrorCode.USER_NOT_EXISTED));
+        Post post = Post.builder()
+                .content(request.getContent())
+                .user(user)
+                .targetId(request.getTargetId())
+                .createdAt(LocalDateTime.now())
+                .updatedAt(LocalDateTime.now())
+                .visibility(request.getVisibility())
+                .build();
         post = postRepository.save(post);
-        String finalPostId = post.getId();
-        PostResponse postResponse = postDTOMapper.fromPost(post);
-        if (!files.isEmpty()) {
-            postResponse.setMedias(files.stream()
-                    .map(file -> mediaDTOMapper.toResponse(mediaRepository.save(
-                            mediaUploader.upload(file, finalPostId, MediaTargetType.POST))
-                    )).toList());
-        }
+        PostResponse postResponse = postDTOMapper.toResponse(post);
+        UploadFileResponse uploadFileResponse = uploadFileService.uploadFile(post.getId(), UploadFileRequest.builder()
+                        .images(request.getImages())
+                        .docs(request.getDocs())
+                        .videos(request.getVideos())
+                .build(), MediaTargetType.POST);
+        postResponse.setImages(uploadFileResponse.getImages());
+        postResponse.setDocs(uploadFileResponse.getDocs());
+        postResponse.setVideos(uploadFileResponse.getVideos());
         return postResponse;
     }
 
     @Override
+    @Transactional
     public PostResponse update(String id, PostUpdateRequest request, List<UploadFile> files) {
         String userId = SecurityContextHolder.getContext().getAuthentication().getName();
         Post post = postRepository.findById(id).orElseThrow(() ->
@@ -99,30 +118,65 @@ public class PostService implements PostUseCase {
         }
 
         postRepository.save(post);
-        PostResponse postResponse = postDTOMapper.fromPost(post);
-        postResponse.setMedias(finalMedia.stream()
-                .map(mediaDTOMapper::toResponse).collect(Collectors.toList()));
+        PostResponse postResponse = postDTOMapper.toResponse(post);
+        postResponse.setImages(finalMedia.stream()
+                .map(mediaDTOMapper::toResponse).toList());
         return postResponse;
     }
 
     @Override
     public void deleteById(String id) {
-        mediaRepository.findAllByTargetId(id).forEach(media -> mediaRepository.deleteById(media.getId()));
+        mediaRepository.findAllByTargetId(id).forEach(media -> {
+            mediaUploader.delete(UrlUtil.extractPublicId(media.getUrl()), media.getMediaType());
+            mediaRepository.deleteById(media.getId());
+        });
         postRepository.deleteById(id);
     }
 
     @Override
+    public List<PostResponse> getMyPosts() {
+        String userId = SecurityContextHolder.getContext().getAuthentication().getName();
+        return getOfUserIds(userId);
+    }
+
+    @Override
+    public List<PostResponse> getOfUserIds(String userId) {
+        List<Post> posts = postRepository.findAllByTargetId(userId);
+        List<PostResponse> postResponses = posts.stream().map(postDTOMapper::toResponse).toList();
+        postResponses.forEach(post -> {
+            List<Media> medias = mediaRepository.findAllByTargetId(post.getId());
+            List<MediaResponse> images = new ArrayList<>();
+            List<MediaResponse> videos = new ArrayList<>();
+            List<MediaResponse> docs = new ArrayList<>();
+            medias.forEach(media -> {
+                if (MediaType.IMAGE.equals(media.getMediaType())) {
+                    images.add(mediaDTOMapper.toResponse(media));
+                } else if (MediaType.VIDEO.equals(media.getMediaType())) {
+                    videos.add(mediaDTOMapper.toResponse(media));
+                } else if (MediaType.DOCUMENT.equals(media.getMediaType())) {
+                    docs.add(mediaDTOMapper.toResponse(media));
+                }
+            });
+            post.setImages(images);
+            post.setVideos(videos);
+            post.setDocs(docs);
+        });
+        return postResponses;
+    }
+
+    @Override
     public PostResponse getById(String id) {
-        PostResponse result = postDTOMapper.fromPost(postRepository.findById(id)
+        PostResponse result = postDTOMapper.toResponse(postRepository.findById(id)
                 .orElseThrow(() -> new AppException(ErrorCode.POST_NOT_EXISTED)));
-        result.setMedias(mediaRepository.findAllByTargetId(id).stream()
-                .map(mediaDTOMapper::toResponse).collect(Collectors.toList()));
+        result.setImages(mediaRepository.findAllByTargetId(id).stream()
+                .map(mediaDTOMapper::toResponse).toList());
         return result;
     }
 
     @Override
     public List<PostResponse> getAllFromTargetIdWithPage(String targetId, int offset, int limit) {
-        return List.of();
+        return postRepository.findAllByTargetIdWithPagination(targetId, offset, limit)
+                .stream().map(postDTOMapper::toResponse).toList();
     }
 
     @Override
